reports/stage_reports/Diagramscene_ultima-syz/20251226_064526/tests_report.txt
[stage] tests
[project] C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[time] 20251226_064526
[meta] cmd: cmd /c "set PATH=D:\Qt\6.10.1\mingw_64\bin;D:\Qt\Tools\mingw1310_64\bin;%PATH% && cd /d C:\Users\lenovo\Desktop\Diagramscene_ultima-syz && cd tests\generated && qmake tests.pro && mingw32-make clean && mingw32-make -f Makefile.Debug && debug\tests.exe && move debug\*.gc* ."
[meta] cwd: C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[meta] returncode: 2
[meta] timed_out: False
[meta] timeout_s: 600.0

== findings ==
- tests | error | 测试命令执行失败

== stdout (truncated) ==
mingw32-make -f Makefile.Release clean
mingw32-make[1]: Entering directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
del release\moc_predefs.h
del release\moc_diagramscene.cpp release\moc_diagramtextitem.cpp release\moc_findreplacedialog.cpp release\moc_mainwindow.cpp
del release\test_arrow.moc
del release\test_arrow.o release\arrow.o release\arrow.o release\diagramitem.o release\diagramitemgroup.o release\diagrampath.o release\diagramscene.o release\diagramtextitem.o release\findreplacedialog.o release\mainwindow.o release\moc_diagramscene.o release\moc_diagramtextitem.o release\moc_findreplacedialog.o release\moc_mainwindow.o
mingw32-make[1]: Leaving directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
mingw32-make -f Makefile.Debug clean
mingw32-make[1]: Entering directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
del debug\moc_predefs.h
del debug\moc_diagramscene.cpp debug\moc_diagramtextitem.cpp debug\moc_findreplacedialog.cpp debug\moc_mainwindow.cpp
del debug\test_arrow.moc
del debug\test_arrow.o debug\arrow.o debug\arrow.o debug\diagramitem.o debug\diagramitemgroup.o debug\diagrampath.o debug\diagramscene.o debug\diagramtextitem.o debug\findreplacedialog.o debug\mainwindow.o debug\moc_diagramscene.o debug\moc_diagramtextitem.o debug\moc_findreplacedialog.o debug\moc_mainwindow.o
mingw32-make[1]: Leaving directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
g++ -fno-keep-inline-dllexport --coverage -g -Wall -Wextra -Wextra -dM -E -o debug\moc_predefs.h D:\Qt\6.10.1\mingw_64\mkspecs\features\data\dummy.cpp
D:\Qt\6.10.1\mingw_64\bin\moc.exe -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_WIDGETS_LIB -DQT_SVG_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" --include C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated/debug/moc_predefs.h -ID:/Qt/6.10.1/mingw_64/mkspecs/win32-g++ -IC:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated -IC:/Users/lenovo -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtSvg -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++ -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/x86_64-w64-mingw32 -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/backward -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include-fixed -ID:/Qt/Tools/mingw1310_64/x86_64-w64-mingw32/include test_arrow.cpp -o debug\test_arrow.moc
g++ -c -fno-keep-inline-dllexport --coverage -g -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_WIDGETS_LIB -DQT_SVG_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_NEEDS_QMAIN -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" -I. -I../../../.. -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtSvg -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -Idebug -I/include -ID:/Qt/6.10.1/mingw_64/mkspecs/win32-g++  -o debug\test_arrow.o test_arrow.cpp

== stderr (truncated) ==
Makefile.Release:2309: warning: overriding recipe for target 'release/arrow.o'
Makefile.Release:2125: warning: ignoring old recipe for target 'release/arrow.o'
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\release\moc_predefs.h
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\release\moc_diagramscene.cpp
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\release\test_arrow.moc
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\release\test_arrow.o
Makefile.Debug:2311: warning: overriding recipe for target 'debug/arrow.o'
Makefile.Debug:2127: warning: ignoring old recipe for target 'debug/arrow.o'
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\debug\moc_diagramscene.cpp
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\debug\test_arrow.o
Makefile.Debug:2311: warning: overriding recipe for target 'debug/arrow.o'
Makefile.Debug:2127: warning: ignoring old recipe for target 'debug/arrow.o'
test_arrow.cpp: In member function 'void TestArrow::testPaintDoesNotCrash()':
test_arrow.cpp:78:16: error: 'virtual void Arrow::paint(QPainter*, const QStyleOptionGraphicsItem*, QWidget*)' is protected within this context
   78 |     arrow.paint(&painter, &option, nullptr);
      |     ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from test_arrow.cpp:4:
../../arrow.h:30:10: note: declared protected here
   30 |     void paint(QPainter *painter, const QStyleOptionGraphicsItem *option,
      |          ^~~~~
mingw32-make: *** [Makefile.Debug:1943: debug/test_arrow.o] Error 1
